--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>💖 William’s Proposal for Myla 💖</title>
 <style>
 * { box-sizing: border-box; margin: 0; padding: 0; }
+
 body {
   height: 100vh;
   width: 100vw;
@@ -15,20 +16,24 @@ body {
   justify-content: center;
   align-items: center;
   background: linear-gradient(135deg, #ffb6c1, #ff69b4);
-  font-family: 'Poppins', cursive, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; /* clean responsive font */
   text-align: center;
   position: relative;
+  padding: 10px;
 }
+
 h1 {
   color: white;
-  font-size: 3em;
+  font-size: 6vw; /* responsive for phones & tablets */
+  max-font-size: 48px;
   text-shadow: 2px 2px 10px rgba(255, 20, 147, 0.8);
   margin-bottom: 20px;
   animation: fadeIn 1.5s ease-in-out;
   z-index: 2;
 }
+
 img {
-  width: 400px;
+  width: 400px; 
   max-width: 90%;
   border-radius: 20px;
   border: 4px solid white;
@@ -36,6 +41,7 @@ img {
   margin-bottom: 20px;
   z-index: 2;
 }
+
 .buttons {
   display: flex;
   gap: 15px;
@@ -43,8 +49,10 @@ img {
   flex-wrap: wrap;
   justify-content: center;
 }
+
 button {
-  font-size: 1.3em;
+  font-size: 4vw; /* responsive button font */
+  min-font-size: 16px;
   padding: 10px 25px;
   border: none;
   border-radius: 10px;
@@ -52,38 +60,53 @@ button {
   transition: transform 0.3s ease, background-color 0.3s ease;
   box-shadow: 0 4px 10px rgba(255, 20, 147, 0.3);
 }
+
 #yesBtn { background-color: #ff1493; color: white; }
 #yesBtn:hover { background-color: #ff69b4; transform: scale(1.1); }
 #noBtn { background-color: white; color: #ff1493; position: relative; }
 #noBtn:hover { transform: rotate(10deg); }
+
 .heart {
   position: absolute;
   color: #fff;
-  font-size: 20px;
+  font-size: 5vw; /* responsive heart size */
+  max-font-size: 40px;
+  min-font-size: 20px;
   opacity: 0.8;
   animation: float 6s linear infinite;
   z-index: 1;
   pointer-events: none;
 }
+
 @keyframes float {
   0% { transform: translateY(100vh) scale(1); opacity: 0.8; }
   100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
 }
+
 @keyframes fadeIn {
   from { opacity: 0; transform: scale(0.9); }
   to { opacity: 1; transform: scale(1); }
 }
+
 @keyframes glow {
   0%, 100% { text-shadow: 0 0 20px #fff, 0 0 40px #ff69b4; }
   50% { text-shadow: 0 0 30px #fff, 0 0 60px #ff1493; }
 }
+
 footer {
   position: absolute;
   bottom: 10px;
   color: white;
-  font-size: 0.9em;
+  font-size: 3vw; /* responsive footer */
+  max-font-size: 16px;
   opacity: 0.8;
   z-index: 2;
+}
+
+@media (max-width: 600px) {
+  img { width: 70vw; }
+  button { font-size: 5vw; padding: 0.8em 1.5em; }
+  .heart { font-size: 8vw; }
 }
 </style>
 </head>
@@ -99,7 +122,7 @@ footer {
 
 <div id="celebration" style="display:none; text-align:center;"></div>
 
-<!-- Audio element -->
+<!-- Audio kept in DOM -->
 <audio id="bgm" loop>
   <source src="song_starting_3_05.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
@@ -123,9 +146,8 @@ noBtn.addEventListener('mouseover', () => {
 
 // Yes button triggers music + celebration
 yesBtn.addEventListener('click', () => {
-  // Try to play music, but don't block the rest of the click
-  bgm.currentTime = 0;
-  bgm.play().catch(err => console.warn("Audio could not play:", err));
+  // Play music reliably
+  bgm.play().catch(err => console.log('Audio play blocked:', err));
 
   // Hide main content
   document.getElementById('mainImg').style.display = 'none';
